--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,9 +33,13 @@ body {
 .cat {
   display: flex;
   overflow: hidden;
-  transform: translateY(6em);
+  transform: translateY(100px);
   width: 100%;
   height: 100%;
+
+  position: absolute;
+  bottom: 0;
+  max-width: 800px;
 }
 
 .cat .cat__paw {
