Add tree svg and update bauble smash animation

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,18 @@ body {
   width: 100vw;
 }
 
+.tree__group path {
+  fill: #096d09;
+}
+
+.tree__container {
+  position: absolute;
+  bottom: 75%;
+  /* height: 50vh; */
+  /* width: 1000px; */
+  /* margin: 0 auto; */
+}
+
 /* Top Level Styling */
 .app {
   align-items: flex-end;
